# project1

./: README.md  environment.yml  example.py  pyproject.toml  requirements.txt  setup.py
.github/workflows/: github-actions.yml
seqparser/: parse.py  seq.py
tests/: test_parsers.py  test_transcribe.py  unit_test.fq
